<resources>
    <string name="app_name">Quick Print</string>
    <string name="Appkey">4rhx08w584j372c</string>
    <string name="Appsecret">w40l3gq5phioool</string>
    <string name="select_picture">Select Picture Using</string>

    <string name="cc_d_india1">2x2in for Passport</string>
    <string name="cc_d_india2">2x2in for VISA</string>
    <string name="cc_d_india3">35x35mm for OCI</string>
    <string name="cc_d_india4">25x35mm for PAN card</string>
    <string name="cc_h_india1">India (Passport)</string>
    <string name="cc_h_india2">India (VISA)</string>
    <string name="cc_h_india3">India (OCI)</string>
    <string name="cc_h_india4">India (PAN Card)</string>
    <string name="centi">Centimeters (cm)</string>
    <string name="choose_paper_size">Choose Paper Size</string>
    <string name="choose_size">Choose Size</string>
    <string name="cs_d_1">Passport : United States</string>
    <string name="cs_d_11">VISA: Brazil, Italy, India, Korea, Spain</string>
    <string name="cs_d_2">Passport : United States</string>
    <string name="cs_d_3">Passport : United States</string>
    <string name="cs_h_1">2x2 inches</string>
    <string name="cs_h_2">35mm x 45mm (Type 1)</string>
    <string name="cs_h_3">2x2 inches</string>
    <string name="inch">Inches (in)</string>
    <string name="size_warn">Can &apos;t be greater than</string>
    <string name="fill_details">Fill all details</string>
    <string name="milli">Millimeters (mm)</string>
    <string name="more_apps">More Apps</string>
    <string name="pixels">Pixels (px)</string>
    <string name="ps_d_1">89mm x 127mm</string>
    <string name="ps_d_10">100mm x 148mm</string>
    <string name="ps_d_11">120mm x 235mm</string>
    <string name="ps_d_2">102 x 152mm</string>
    <string name="ps_d_3">127mm x 178mm</string>
    <string name="ps_d_4">152mm x 203mm</string>
    <string name="ps_d_5">203mm x 254mm</string>
    <string name="ps_d_6">210mm x 297mm</string>
    <string name="ps_d_7">203mm x 305mm</string>
    <string name="ps_d_8">254mm x 305mm</string>
    <string name="ps_d_9">90mm x 205mm</string>
    <string name="ps_h_1">3R (3.5x5 inches)</string>
    <string name="ps_p_1">Rs.65/- + 18% GST</string>
    <string name="ps_h_10">Other (3.9x5.8 inches)</string>
    <string name="ps_p_10">Rs.70/- + 18% GST</string>
    <string name="ps_h_11">(4.7x9.3 inches)</string>
    <string name="ps_p_11">Rs.80/- + 18% GST</string>
    <string name="ps_h_2">4R (4x6 inches)</string>
    <string name="ps_p_2">Rs.70/- + 18% GST</string>
    <string name="ps_h_3">5R (5x7 inches)</string>
    <string name="ps_p_3">Rs.75/- + 18% GST</string>
    <string name="ps_h_4">6R (6x8 inches)</string>
    <string name="ps_p_4">Rs.80/- + 18% GST</string>
    <string name="ps_h_5">8R (8x10 inches)</string>
    <string name="ps_p_5">Rs.85/- + 18% GST</string>
    <string name="ps_h_6">A4 Paper (8.27x11.69 inches)</string>
    <string name="ps_p_6">Rs.90/- + 18% GST</string>
    <string name="ps_h_7">S8R (8x12 inches)</string>
    <string name="ps_p_7">Rs.93/- + 18% GST</string>
    <string name="ps_h_8">10R (10x12 inches)</string>
    <string name="ps_p_8">Rs.100/- + 18% GST</string>
    <string name="ps_h_9">Long (3.5x8.1 inches)</string>
    <string name="ps_p_9">Rs.70/- + 18% GST</string>
    <string name="sn_d_fb">(851px x 315px)</string>
    <string name="sn_d_google">(2120px x 1192px)</string>
    <string name="sn_d_insta">(612px x 612px)</string>
    <string name="sn_d_linkedin">(646px x 220px)</string>
    <string name="sn_d_pinterest">(736px x 736px)</string>
    <string name="sn_d_twitter">(520px x 260px)</string>
    <string name="sn_h_fb">Facebook Cover</string>
    <string name="sn_h_google">Google+ Header</string>
    <string name="sn_h_insta">Instagram</string>
    <string name="sn_h_linkedin">LinkedIn Cover</string>
    <string name="sn_h_pinterest">Pinterest Post</string>
    <string name="sn_h_twitter">Twitter Header</string>
    <string name="some_tips">Some tips for you :-</string>
    <string name="list_title_1">Your previous selection</string>
    <string name="list_title_2">Most common sizes</string>
    <string name="list_title_3">Choose Photo Size</string>
    <string name="list_title_4">Choose social network</string>
    <string name="list_title_5">Other Counteries</string>
    <string name="permission">Give Permission !</string>
    <string name="thank_toast">Thank for your rating and comment.</string>
    <string name="invalid_ratio_msg">Unable to create image with selected Ratio. Please try with other Ratio.</string>
    <string name="invalid_ratio_title">Invalid Ratio</string>
    <string name="invalid_size_msg">Your phone is unable to handle the image of selected size.</string>
    <string name="invalid_size_title">Warning</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="sharpness">Sharpness</string>
    <string name="saturation">Saturation</string>
    <string name="exposure">Exposure</string>
    <string name="white_balance">White Balance</string>
    <string name="processing_image">Processing image...</string>
    <string name="save_image_">Processing on image..</string>
    <string name="create_dir_err">Can&apos;t create directory to save image.</string>
    <string name="saved">Image saved to:</string>
    <string name="ok">ok</string>
    <string name="plzwait">Please Wait</string>
    <string name="sharetext">Share Text</string>
    <string name="sharetext1">demo</string>
    <string name="shareusing">Share Quick Print Application</string>
    <string name="deleted">Photo is Deleted..!</string>
    <string name="del_error_toast">Photo Not Deleted..!</string>
    <string name="visa">Indian Visa</string>
    <string name="visa_info">PHOTO REQUIREMENTS</string>
    <string name="visa_info1">Online India Visa Application allows the Applicant to upload a digital photograph of self to complete the regular visa application.</string>
    <string name="visa_info10">9. Make sure that photo presents full head from top of hair to bottom of chin. Head should measure 1 inch to 1-3/8 inches (25mm to 35mm). Make sure eye height is between 1-1/8 inches to 1-3.</string>
    <string name="visa_info2">1. Format â€“ JPEG</string>
    <string name="visa_info3">2. Size 10KB to 300KB</string>
    <string name="visa_info4">3. The height and width of the Photo must be equal.</string>
    <string name="visa_info5">4. Photo should present Full face, front view, eyes open.</string>
    <string name="visa_info6">5. Center head within frame and present full head from top of hair to bottom of chin.</string>
    <string name="visa_info7">6. Background should be plain light colored or white background.</string>
    <string name="visa_info8">7. No shadows on the face or on the background.</string>
    <string name="visa_info9">8. Without borders.</string>
    <string name="passport_info10">6. Head coverings are not permitted except for religious reasons, but the facial features from bottom of chin to top of forehead and both edges of the face must be clearly shown.</string>
    <string name="passport_info11">7. The expression on the face should look natural.</string>
    <string name="passport_info3">Advice for Passport Applicants to Submit Proper Quality Photograph</string>
    <string name="passport_info4">1. The photograph should be in colour and of the size of 2 inch x 2 inch (51 mm x 51 mm).</string>
    <string name="passport_info6">2. It should have full face, front view, eyes open.</string>
    <string name="passport_info7">3. Photo should present full head from top of hair to bottom of chin. Center head within frame.</string>
    <string name="passport_info8">4. The background should be a plain light colored background.</string>
    <string name="passport_info9">5. There should not be any distracting shadows on the face or on the background.</string>
</resources>
